# deployment-a-GitHub-Runner

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  env_file  env_file.env  env_file.txt  pyproject.toml  terraform.tfstate
.ci/: ansible-lint  yamllint
.github/workflows/: deploy.yaml
ansible/: inventory.txt  inventory.yml  playbook.yml
deployment/ansible/: ansible.cfg  create_systemd_unit.yml  install_prometheous.yaml  inventory.tpl  playbook.yml  prometheus.yml  terraform.tfstate
deployment/ansible/install_docker/handlers/: main.yml
deployment/ansible/install_docker/tasks/: Debian.yml  RedHat.yml  main.yml
deployment/ansible/install_docker/vars/: main.yml
deployment/ansible/install_github_runner/defaults/: main.yml
deployment/ansible/install_github_runner/handlers/: main.yml
deployment/ansible/install_github_runner/tasks/: create_systemd_unit.yml
deployment/ansible/install_github_runner/vars/: main.yml
deployment/ansible/inventory/: inventory.ini
deployment/ansible/templates/: src.j2
deployment/terraform/: Makefile  ansible.tf  env_file.env  inventory.tftpl  main.tf  network.tf  outputs.tf  terraform.tfstate.backup  variables.tf  versions.tf
deployment/terraform/templates/: get_github_token.sh  inventory.tftpl
deployment/web_app/: Dockerfile  docker-compose.yml
deployment/web_app/web_app/: settings.py  urls.py
deployment/web_app/web_application/: __init__.py  models.py  serializers.py  urls.py  views.py
deployment/web_app/web_application/fixtures/: employees.json  telephone_numbers.json
terraform/: main.tf  variables.tf
(+15 files in other folders)
